# actix-rest-vue-setup

./: .gitignore  Cargo.toml  Makefile.toml  README.md  TODO.md
.github/workflow/: learning-github-actions.yml
.github/workflows/: install_and_test_all.yml
config/: configuration.yaml
src/: configuration.rs  lib.rs  main.rs  run.rs  startup.rs  startup_lib.rs
src/routes/: client_config.rs  health_check.rs  login.rs  mod.rs  static_content.rs
src/vue-client/: cypress.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.cypress.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src/vue-client/cypress/e2e/: app-shows-config.cy.ts  home-loads.cy.ts  language-switcher-works.cy.ts
src/vue-client/src/: App.vue  main.ts
src/vue-client/src/components/: HelloWorld.vue  LanguageSwitcher.vue  Navigation.vue  Title.vue
src/vue-client/src/components/__tests__/: LanguageSwitcher.spec.ts  Title.spec.ts
src/vue-client/src/i18n/: Translations.ts  index.ts
src/vue-client/src/i18n/locales/: de.json  en.json
src/vue-client/src/router/: index.ts
src/vue-client/src/scss/: main.scss
src/vue-client/src/stores/: config.ts
src/vue-client/src/views/: AboutView.vue  DataPrivacy.vue  HomeView.vue  ImprintView.vue
tests/: health_check.rs
tests/api/: client_config.rs  health_check.rs  helpers.rs  logging.rs  main.rs  static.rs  static_content.rs
