# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "actix-rest-vue-setup"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix-rest-vue-setup-main"

[[bin]]
path = "src/run.rs"
name = "actix-rest-vue-setup-run"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = "4.3.1"
actix-files = "0.6.2"
sysinfo = "0.29.10"
serde = { version = "1.0.193", features = ["derive"] }
config = { version = "0.13.4", features = [] }

[dev-dependencies]
reqwest = "0.11.18"
regex = "1.9.1"
rand = "0.8.5"
